tests/tokenize/error/tokenize.err
Error: Unexpected char in input, expected (, ), -, 0, ;, end of input
   ╭─[tests/tokenize/error/tokenize.scm:1:1]
   │
 1 │ ```
   · ┬  
   · ╰── Unexpected char `
───╯
